[package]
name = "riaps-core"
description = "RIAPS 核心无锁原语库：SPSC / RCU / Deferred Drop（no_std 兼容）"
autobenches = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

# 依赖规则（§1.6）：纯核心，零外部依赖，不接触任何 OS 特定 API。
# 生产环境建议：crossbeam-utils (CachePadded)、portable-atomic (32-bit AtomicU64)。
# 参考实现为保证离线可编译，此处不引入外部 crate。
[dependencies]

# 基准测试套件（架构文档 §4.6 性能指标基准）。
# 运行：cargo bench -p riaps-core
[[bench]]
name = "primitives"
harness = false
