[package]
name = "riaps-dsp"
description = "RIAPS 图拓扑与运行时：DSP Graph / DspNode / 事件总线"
autobenches = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

# 依赖规则（§1.6）：可依赖 riaps-core, riaps-sys；
# 严禁依赖 riaps-host（保证音频核心路径可移植性）。
[dependencies]
riaps-core = { path = "../riaps-core" }
riaps-sys = { path = "../riaps-sys" }

# 基准测试套件：DSP Graph process / EventBus emit。
# 运行：cargo bench -p riaps-dsp
[[bench]]
name = "dsp_primitives"
harness = false
