[package]
name = "riaps-sys"
description = "RIAPS 系统交互抽象：FPU 异常抑制 / Thread Provisioner / rdtsc 性能探针"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# 依赖规则（§1.6）：仅可依赖 riaps-core；禁止依赖 riaps-dsp / riaps-host。
# 平台特权调用通过 extern "C" 直接声明（生产环境建议 zbus / mach / windows crate）。
[dependencies]
riaps-core = { path = "../riaps-core" }
